improve Trainer getAll method